--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Pokemon and Trainers Index</h1>
-<%= link_to "View Trainers", "/trainers" %>
-<p>View Pokemon</p>
+<%= link_to "View Trainers", "/trainers" %><br><br>
+<%= link_to "View Pokemon", "/pokemons" %>
