Pass orderly spec test for trainer

--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -2,4 +2,5 @@
 
 <% @trainers.each do |trainer| %>
   <p><%= trainer.name %></p>
+  <p>Added to index on <%= trainer.date_created %></p>
 <% end  %>
