Pass trainer pokemon count spec test

--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -4,3 +4,5 @@
 <p>Age: <%= @trainer.age %></p>
 
 <p>Pokedex certified? <%= @trainer.certified %></p>
+
+<p>Number of Pokemon: <%= @trainer.pokecount %></p>
