Add pokemon index link to all pages

--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,5 +1,7 @@
 <h1>All Trainers</h1>
 
+<%= link_to "View Pokemon", "/pokemons" %>
+
 <% @trainers.each do |trainer| %>
   <p><%= trainer.name %></p>
   <p>Added to index on <%= trainer.date_created %></p>
