--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,5 +1,7 @@
 <h1>trainer info:</h1>
 
+<%= link_to "View Pokemon", "/pokemons" %>
+
 <p>Name: <%= @trainer.name %></p>
 <p>Age: <%= @trainer.age %></p>
 
