--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @pokemon.name %></h1>
+
+<%= link_to "View Pokemon", "/pokemons" %>
 <h2>Base Hp:</h2>
 <%= @pokemon.base_hp %>
 <h2>Currently in battle?</h2>
