--- a/app/views/trainer_pokemons/index.html.erb
+++ b/app/views/trainer_pokemons/index.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @trainer.name%>'s Pokemon:</h1>
 
+<%= link_to "View Pokemon", "/pokemons" %>
+
 <% @trainer.pokemons.each do |pokemon| %>
 <h3><%= pokemon.name %></h3>
 <p>Base Hp: <%= pokemon.base_hp %></p>
