Alter positioning of links for usability

--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -1,6 +1,7 @@
-<h1><%= @pokemon.name %></h1>
-
 <%= link_to "View Pokemon", "/pokemons" %>
+<%= link_to "View Trainers", "/trainers" %>
+
+<h1><%= @pokemon.name %></h1>
 <h2>Base Hp:</h2>
 <%= @pokemon.base_hp %>
 <h2>Currently in battle?</h2>
