--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,6 +1,7 @@
-<h1>trainer info:</h1>
-
 <%= link_to "View Pokemon", "/pokemons" %>
+<%= link_to "View Trainers", "/trainers" %>
+
+<h1>trainer info:</h1>
 
 <p>Name: <%= @trainer.name %></p>
 <p>Age: <%= @trainer.age %></p>
