Add link to see a specific trainer's pokemon index

--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -9,3 +9,5 @@
 <p>Pokedex certified? <%= @trainer.certified %></p>
 
 <p>Number of Pokemon: <%= @trainer.pokecount %></p>
+
+<%= link_to "View #{@trainer.name}'s Pokemon", "/trainers/#{@trainer.id}/pokemons"%>
